Update file references for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         max-width: 400px;
         border: 1px solid #ddd;
         border-radius: 4px;
-    background: url('../wallet front.jpg') center center/cover no-repeat, #fafafa;
+    background: url('wallet front.jpg') center center/cover no-repeat, #fafafa;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -76,7 +76,7 @@
             <button id="snapshotBtn" style="margin-top:18px;display:block;width:100%;max-width:400px;">Snapshot</button>
         </div>
     </div>
-    <script src="src/html2canvas.min.js"></script>
+    <script src="html2canvas.min.js"></script>
     <script>window.html2canvas = html2canvas;</script>
     <script src="app.js"></script>
 </body>
