--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
         <h1>Choose Your Product</h1>
         <div class="products">
             <div class="product-card" onclick="window.location.href='index.html'">
-                <img src="../wallet front.jpg" alt="Wallet" class="product-img">
+                <img src="wallet front.jpg" alt="Wallet" class="product-img">
                 <div class="product-title">Wallet</div>
                 <div>Personalized font preview</div>
             </div>
