--- a/products.html
+++ b/products.html
@@ -8,7 +8,13 @@
         body { font-family: Arial, sans-serif; background: #e6fafa; margin: 0; padding: 0; }
         .container { max-width: 900px; margin: 40px auto; background: #fff; border-radius: 8px; box-shadow: 0 2px 8px #0001; padding: 32px; }
         h1 { text-align: center; }
-        .products { display: flex; justify-content: center; gap: 48px; margin-top: 40px; }
+        .products {
+            display: flex;
+            justify-content: center;
+            gap: 48px;
+            margin-top: 40px;
+            flex-wrap: wrap;
+        }
         .product-card {
             background: #f8f8f8;
             border-radius: 8px;
@@ -18,6 +24,7 @@
             width: 200px;
             cursor: pointer;
             transition: box-shadow 0.2s, transform 0.2s;
+            margin-bottom: 24px;
         }
         .product-card:hover {
             box-shadow: 0 4px 16px #0003;
@@ -33,6 +40,47 @@
             font-size: 1.2rem;
             font-weight: bold;
             margin-bottom: 8px;
+        }
+        @media (max-width: 700px) {
+            .container {
+                padding: 10px;
+            }
+            .products {
+                gap: 18px;
+            }
+            .product-card {
+                width: 140px;
+                padding: 16px 6px 12px 6px;
+            }
+            .product-img {
+                width: 80px;
+                height: 80px;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                max-width: 100vw;
+                margin: 0;
+                border-radius: 0;
+                box-shadow: none;
+            }
+            .products {
+                flex-direction: column;
+                align-items: center;
+                gap: 12px;
+            }
+            .product-card {
+                width: 90vw;
+                min-width: 0;
+                padding: 12px 2vw 10px 2vw;
+            }
+            .product-img {
+                width: 60px;
+                height: 60px;
+            }
+            h1 {
+                font-size: 1.3rem;
+            }
         }
     </style>
 </head>
