New page for custom name sign

--- a/products.html
+++ b/products.html
@@ -93,10 +93,10 @@
                 <div class="product-title">Wallet</div>
                 <div>Personalized font preview</div>
             </div>
-            <div class="product-card" onclick="alert('Docking Station preview coming soon!')">
-                <img src="https://img.icons8.com/ios-filled/100/000000/virtual-reality.png" alt="Docking Station" class="product-img">
-                <div class="product-title">Docking Station</div>
-                <div>Preview & customize (soon)</div>
+            <div class="product-card" onclick="window.location.href='custom-name-sign.html'">
+                <img src="https://img.icons8.com/ios-filled/100/000000/virtual-reality.png" alt="Custom Name Sign" class="product-img">
+                <div class="product-title">Custom Name Sign</div>
+                <div>Font preview & customize</div>
             </div>
             <div class="product-card" onclick="alert('VR Stand preview coming soon!')">
                 <img src="https://img.icons8.com/ios-filled/100/000000/virtual-reality.png" alt="VR Stand" class="product-img">
